--- a/pom.xml
+++ b/pom.xml
@@ -315,6 +315,13 @@
 				<version>1.11.538</version>
 			</dependency>
 
+			<dependency>
+    				<groupId>javax.annotation</groupId>
+    				<artifactId>javax.annotation-api</artifactId>
+    				<version>1.3.1</version>
+			</dependency>
+			
+			
 			<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-ses -->
 			<dependency>
 				<groupId>com.amazonaws</groupId>
